tests/fixtures/errors/dup_pos_then_named.z
# E0300: a parameter bound by the first positional arg and then named again.
f: function {a: i64} is {}
main: function is {
    f 1 a: 2
}
